<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The LineageOS Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Parts - Homepage - System -->
    <string name="device_settings_title">Poco Parts</string>
    <string name="device_settings_summary">Customise the device specific aspects</string>
    <!-- Audio and Vibration-->
    <string name="audio_category">Audio and Vibration</string>
    <!-- Display and Touch -->
    <string name="display_title">Display and Touch</string>

    <!-- Thermal Profiles -->
    <string name="thermal_title">Thermal profiles and game mode</string>
    <string name="thermal_summary">Per-app thermal and touchscreen profiles</string>
    <string name="thermal_default">Default</string>
    <string name="thermal_benchmark">Benchmark</string>
    <string name="thermal_camera">Camera</string>
    <string name="thermal_dialer">Dialer</string>
    <string name="thermal_gaming">Gaming</string>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.\n\nWARNING: Ensure that any headphones are unplugged.</string>

    <!-- Touch Control Settings -->
    <string name="touch_game_mode_title">Enable game mode</string>
    <string name="touch_game_mode_summary">Activate manual touchscreen feature controls and increase CPU and GPU performance</string>
    <string name="touch_response_title">Touch response</string>
    <string name="touch_response_summary">Control touch response</string>
    <string name="touch_sensitivity_title">Touch sensitivity</string>
    <string name="touch_sensitivity_summary">Control touch sensitivity for repeated taps</string>
    <string name="touch_resistant_title">Touch-resistant area</string>
    <string name="touch_resistant_summary">Reduce touch sensitivity near the edges to avoid triggering touch controls</string>

    <!-- Touch Sampling -->
    <string name="htsr_enable_title">Increase Touch Responsiveness</string>
    <string name="htsr_enable_summary">Increases touch polling rate to decrease latency</string>
    <string name="htsr_footer">Driver constructed based on palm sensor sysfs node by Xiaomi.\n Mode Values were picked by reading logcat from MIUI when game mode was enabled.</string>

    <!-- LCD Features -->
    <string name="lcd_features_title">LCD features</string>
    <string name="lcd_features_summary">High Brightness Mode, CABC</string>
    <string name="lcd_hbm_title">High Brightness Mode (HBM)</string>
    <string name="lcd_hbm_tile_title">HBM</string>
    <string name="lcd_cabc_title">CABC Mode</string>
    <string name="lcd_features_info">High Brightness Mode (HBM) increases the maximum brightness of the display to improve visibility under sunlight. Increases power consumption.\n\nCABC (Content Adaptive Backlight Control) adjusts display and backlight brightness based on currently shown content, to reduce power consumption without degradation.</string>
    
    <!-- Refresh Rate tile -->
    <string name="refresh_rate_tile_title">Refresh Rate</string>

    <!-- Haptic Level Settings -->
    <string name="haptic_title">Haptic feedback</string>
    <string name="haptic_level_title">Feedback strength level</string>
    <string name="haptic_level_summary">Adjust the strength level of overall haptic feedback</string>
    <string name="haptic_level_summary_incompatible">Your kernel did not support custom QTI Haptic Strength Level</string>

    <!-- Raise to wake strings-->
    <string name="raise_to_wake_gesture_title">Raise to wake</string>
    <string name="raise_to_wake_gesture_summary">Wake up the device instead of pulsing notification</string>

    <!-- FPS Counter -->
    <string name="fps_info_title">FPS Counter</string>

    <!-- Dirac settings -->
    <string name="dirac_title">Mi Sound Enhancer</string>
    <string name="dirac_summary">Optimize audio quality</string>
    <string name="dirac_headset_title">Choose headphones type</string>
    <string name="dirac_preset_title">Choose a preset</string>

    <!-- Dirac settings: Headset types -->
    <string name="dirac_headset_default">Default</string>
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston-1</string>
    <string name="dirac_headset_general">General</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston-2</string>
    <string name="dirac_headset_piston_standard">Standard Edition</string>
    <string name="dirac_headset_headphone">Mi Headphones</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling Type-C</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling 3.5mm</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>

    <!-- Dirac settings: Equalizer presets -->
    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>
    <string name="dirac_preset_bass_booster">Bass Booster</string>
    <string name="dirac_preset_live">Live</string>
    <string name="dirac_preset_balanced">Balanced</string>
    <string name="dirac_preset_bass_reduction">Bass Reduction</string>
    <string name="dirac_preset_treble_reduction">Treble Reduction</string>
    <string name="dirac_preset_soft_bass">Soft Bass</string>
    <string name="dirac_preset_soft_treble">Soft Treble</string>
</resources>
