<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The LineageOS Project
     Licensed under the Apache License, Version 2.0 (the "License"
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

     <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <Preference
            android:key="lcd_features_settings"
            android:summary="@string/lcd_features_summary"
            android:title="@string/lcd_features_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="org.lineageos.settings"
                android:targetClass="org.lineageos.settings.display.LcdFeaturesPreferenceActivity" />
        </Preference>

        <Preference
            android:key="htsr_enable"
            android:title="@string/htsr_enable_title"
            android:summary="@string/htsr_enable_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="org.lineageos.settings"
                android:targetClass="org.lineageos.settings.touchsampling.TouchSamplingSettingsActivity" />
        </Preference>

        <Preference
            android:key="thermal_profiles"
            android:summary="@string/thermal_summary"
            android:title="@string/thermal_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="org.lineageos.settings"
                android:targetClass="org.lineageos.settings.thermal.ThermalActivity" />
        </Preference>
  
  </PreferenceCategory>

     <PreferenceCategory
        android:key="audio"
        android:title="@string/audio_category">

        <Preference
            android:key="clear_speaker_settings" 
            android:title="@string/clear_speaker_title"
            android:summary="@string/clear_speaker_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="org.lineageos.settings.speaker.ClearSpeakerActivity"
                android:targetPackage="org.lineageos.settings" />
        </Preference>

        <Preference
            android:key="dirac_headset_pref"
            android:summary="@string/dirac_summary"
            android:title="@string/dirac_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="org.lineageos.settings"
                android:targetClass="org.lineageos.settings.dirac.DiracActivity" />
        </Preference>

        <Preference
            android:key="vibrator_control"
            android:title="@string/haptic_level_title"
            android:summary="@string/haptic_level_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="org.lineageos.settings.haptic.HapticLevelActivity"
                android:targetPackage="org.lineageos.settings" />
        </Preference>
     </PreferenceCategory>

</PreferenceScreen>
